<?xml version="1.0"?>
<package>
  <name>pointgrey_camera_description</name>
  <version>0.12.1</version>
  <description>A series of URDF driver decriptions for Point Grey cameras</description>

  <maintainer email="tbaltovski@clearpathrobotics.com">Tony Baltovski</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

  <export>
  </export>
</package>
